--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,18 @@
         <div class="col-3">
           <div class="newPlant">
             <input id="plant-name" type="text">
-            <button class="btn btn-info">Add Plant</button>
+            <button class="btn btn-info" id="new-plant">Add Plant</button>
           </div>
           <div class="yourPlants">
-            
+            <h3>Your Plants:</h3>
+            <ul id="yourPlants">
+
+            </ul>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-9">
+        <div class="col-8">
           <div class="currentPlant">
-            <h3 id="currentPlantName"></h3>
+            <h3 >This <span id="currentPlantName"></span></h3>
           </div>
           <div class="grow-buttons">
             <button class="btn btn-success" id="feed">Add soil</button>
